signup/signupservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: signup-service
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
